[package]
name = "static-dh-ecdh"
version = "0.1.1"
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
edition = "2018"
categories = ["cryptography", "no-std"]
description = "Pure Rust implementations of static Diffie-Hellman and elliptic curve Diffie-Hellman key-exchange."
documentation = "https://docs.rs/static-dh-ecdh"
homepage = "https://github.com/nihalpasham/static-dh-ecdh.git"
keywords = ["ecdh", "dh", "keyexchange", "crypto", "ecdsa"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nihalpasham/static-dh-ecdh.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = { version = "0.14", default-features = false}

# crypto dependencies
elliptic-curve = "0.8.4"
p256 = {version = "0.7.1", features = ["ecdsa"]}
p384 = "0.6.1"
sha2 = "0.9.2"
rand = {version = "0.7"}    
rand_chacha = "0.3.0"
num-traits = "0.2.14"
num-bigint-dig = {version = "0.6.1"}

# libc-print = "0.1.15"
